[package]
name = "http-request-duplicator"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
hyper = "1.0.0"
once_cell = "1.19.0"
quinn-proto = "0.11.3"
reqwest = { version = "0.12.5", features = ["rustls-tls", "http3", "brotli", "hickory-dns"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tap = "1.0.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
ulid = "1.1.2"

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
